Font fix del dockerfile
hot fix awt-extension quarkus

hot fix awt-extension quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix font-quarkus

hot fix dockerfile

hot fix dockerfile

hot fix dockerfile

hot fix dockerfile

hot fix dockerfile

hot fix dockerfile

hot fix dockerfile

hot fix dockerfile

Fix yum installer

Fix yum installer

Fix yum installer

Fix yum installer

Fix yum installer

Fix yum installer

Fix yum installer

Prova fix con fonts

Prova fix con fonts

Prova fix con fonts

Prova fix con fonts

Prova fix con fonts

Prova fix con fonts

Prova fix con fonts

Prova fix con fonts

--- a/src/main/docker/Dockerfile.jvm.staged
+++ b/src/main/docker/Dockerfile.jvm.staged
@@ -38,6 +38,22 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal:8.3
 ARG JAVA_PACKAGE=java-17-openjdk-headless
 ARG RUN_JAVA_VERSION=1.3.8
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
+
+# Install fonts
+RUN microdnf install yum \
+    && yum update -y \
+    && yum install -y wget \
+    && wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm \
+    && yum install -y epel-release-latest-8.noarch.rpm \
+    && yum install -y curl cabextract xorg-x11-font-utils fontconfig \
+    && rpm -i https://downloads.sourceforge.net/project/mscorefonts2/rpms/msttcore-fonts-installer-2.6-1.noarch.rpm
+#    && yum repolist \
+#    && yum install -y rpm-build \
+#    && yum install -y ttmkfdir \
+#    && yum install -y cabextract \
+#    && wget http://corefonts.sourceforge.net/msttcorefonts-2.5-1.spec \
+#    && rpmbuild -ba msttcorefonts-2.5-1.spec
+
 # Install java and the run-java script
 # Also set up permissions for user `1001`
 RUN microdnf install curl ca-certificates ${JAVA_PACKAGE} \
