Refactor generazione pdf

--- a/src/main/docker/Dockerfile.jvm.staged
+++ b/src/main/docker/Dockerfile.jvm.staged
@@ -38,6 +38,7 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal:8.3
 ARG JAVA_PACKAGE=java-17-openjdk-headless
 ARG RUN_JAVA_VERSION=1.3.8
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
+COPY kubernetes/snitch/resources /snitch/resources
 
 # Install fonts
 RUN microdnf install yum \
